--- a/runtime/near-vm-runner/Cargo.toml
+++ b/runtime/near-vm-runner/Cargo.toml
@@ -15,6 +15,7 @@ This crate implements the specification of the interface that Near blockchain ex
 [dependencies]
 cached = "0.9.0"
 wasmer-runtime = { version = "0.7.0", features = ["singlepass"] }
+wasmer-runtime-core = { version = "0.7.0"}
 near-vm-logic = { path="../near-vm-logic", version = "0.3.0"}
 near-vm-errors = { path = "../near-vm-errors", version = "0.3.0" }
 pwasm-utils = "0.7.0"
